--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.5.0",
+    "@material-ui/icons": "^4.4.3",
+    "formik": "^1.5.8",
     "next": "9.1.1",
     "react": "16.10.2",
     "react-dom": "16.10.2"
