--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
     "formik": "^1.5.8",
+    "formik-material-ui": "^0.0.22",
     "next": "9.1.1",
     "react": "16.10.2",
-    "react-dom": "16.10.2"
+    "react-dom": "16.10.2",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "@types/node": "^12.7.12",
