--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "devDependencies": {
     "@types/node": "^12.7.12",
     "@types/react": "^16.9.5",
+    "eslint": "^6.5.1",
+    "eslint-plugin-react": "^7.16.0",
     "typescript": "^3.6.3"
   }
 }
